tests/parser/argument_validation/test_24.m.octave.out
In test_24.m, line 4
|     arguments
|     ^^^^^^^^^ style: end statement with a semicolon [end_of_statements]
In test_24.m, line 5
|         x (:,:) double
|                 ^^^^^^ error: expected end of statement, found IDENTIFIER instead
MISS_HIT Debug Summary: 1 file(s) analysed, 1 style issue(s), 1 error(s)
